# Noetic-Search-Tools

./: README.md  hello.py  main.py  pyproject.toml
.github/workflows/: build.yml  lint.yml
