[project]
name = "noetic-search-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pygobject>=3.50.0",
    "pyinstaller>=6.11.1",
    "pymupdf>=1.25.2",
    "python-docx>=1.1.0",
    "ruff>=0.9.4",
    "xlrd>=2.0.1",
]
